style: increase cockpit-server-input width to prevent URL cutoffs

--- a/src/index.css
+++ b/src/index.css
@@ -3038,7 +3038,7 @@ body {
   color: #fff;
   font-size: 11px;
   padding: 3px 8px;
-  width: 190px;
+  width: 260px;
   margin-left: 4px;
   outline: none;
   font-family: inherit;
